--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -533,107 +533,103 @@
 					<label class="check">
 						<input class="check__input" type="checkbox" name="color" value="indigo">
 						<span class="check__box">Altcoin</span>
-						
 					</label>
 
-					<label class="custom-radio">
-						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-						<span class="custom-radio__text">Binance</span>
+					<label class="check">
+						<input class="check__input" type="checkbox" name="color" value="indigo">
+						<span class="check__box">Binance</span>
 					</label>
 
-					<label class="custom-radio">
-						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-						<span class="custom-radio__text">Биткоин</span>
+					<label class="check">
+						<input class="check__input" type="checkbox" name="color" value="indigo">
+						<span class="check__box">Биткоин</span>
 					</label>
 
-					<label class="custom-radio">
-						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-						<span class="custom-radio__text">Блокчейн</span>
+					<label class="check">
+						<input class="check__input" type="checkbox" name="color" value="indigo">
+						<span class="check__box">Блокчейн</span>
 					</label>
 
-					<label class="custom-radio">
-						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-						<span class="custom-radio__text">Консенсус</span>
+					<label class="check">
+						<input class="check__input" type="checkbox" name="color" value="indigo">
+						<span class="check__box">Консенсус</span>
 					</label>
 
-					<label class="custom-radio">
-						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-						<span class="custom-radio__text">DeFi</span>
+					<label class="check">
+						<input class="check__input" type="checkbox" name="color" value="indigo">
+						<span class="check__box">DeFi</span>
 					</label>
 
-					<label class="custom-radio">
-						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-						<span class="custom-radio__text">Технический анализ</span>
+					<label class="check">
+						<input class="check__input" type="checkbox" name="color" value="indigo">
+						<span class="check__box">Технический анализ</span>
 					</label>
 
-					<label class="custom-radio">
-						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-						<span class="custom-radio__text">Еще+12</span>
+					<label class="check">
+						<input class="check__input" type="checkbox" name="color" value="indigo">
+						<span class="check__box">Еще+12</span>
 					</label>
 
 					<div class="filter__all-desktop">
-
-						<label class="custom-radio">
-							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-							<span class="custom-radio__text">Технологии</span>
+						<label class="check">
+							<input class="check__input" type="checkbox" name="color" value="indigo">
+							<span class="check__box">Технологии</span>
 						</label>
 
-						<label class="custom-radio">
-							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-							<span class="custom-radio__text">Технический анализ</span>
+						<label class="check">
+							<input class="check__input" type="checkbox" name="color" value="indigo">
+							<span class="check__box">Технический анализ</span>
 						</label>
 
-						<label class="custom-radio">
-							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-							<span class="custom-radio__text">Криптография</span>
+						<label class="check">
+							<input class="check__input" type="checkbox" name="color" value="indigo">
+							<span class="check__box">Криптография</span>
 						</label>
 
-						<label class="custom-radio">
-							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-							<span class="custom-radio__text">Экономика</span>
+						<label class="check">
+							<input class="check__input" type="checkbox" name="color" value="indigo">
+							<span class="check__box">Экономика</span>
 						</label>
 
-						<label class="custom-radio">
-							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-							<span class="custom-radio__text">Торговля</span>
+						<label class="check">
+							<input class="check__input" type="checkbox" name="color" value="indigo">
+							<span class="check__box">Торговля</span>
 						</label>
 
-						<label class="custom-radio">
-							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-							<span class="custom-radio__text">Ethereum</span>
+						<label class="check">
+							<input class="check__input" type="checkbox" name="color" value="indigo">
+							<span class="check__box">Ethereum</span>
 						</label>
 
-						<label class="custom-radio">
-							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-							<span class="custom-radio__text">Приватность</span>
+						<label class="check">
+							<input class="check__input" type="checkbox" name="color" value="indigo">
+							<span class="check__box">Приватность</span>
 						</label>
 
-						<label class="custom-radio">
-							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-							<span class="custom-radio__text">Майнинг</span>
+						<label class="check">
+							<input class="check__input" type="checkbox" name="color" value="indigo">
+							<span class="check__box">Майнинг</span>
 						</label>
 
-						<label class="custom-radio">
-							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-							<span class="custom-radio__text">Metaverse</span>
+						<label class="check">
+							<input class="check__input" type="checkbox" name="color" value="indigo">
+							<span class="check__box">Metaverse</span>
 						</label>
 
-						<label class="custom-radio">
-							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-							<span class="custom-radio__text">История</span>
+						<label class="check">
+							<input class="check__input" type="checkbox" name="color" value="indigo">
+							<span class="check__box">История</span>
 						</label>
 
-						<label class="custom-radio">
-							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-							<span class="custom-radio__text">Консенсус</span>
+						<label class="check">
+							<input class="check__input" type="checkbox" name="color" value="indigo">
+							<span class="check__box">Консенсус</span>
 						</label>
 
-						<label class="custom-radio">
-							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-							<span class="custom-radio__text">Основы</span>
+						<label class="check">
+							<input class="check__input" type="checkbox" name="color" value="indigo">
+							<span class="check__box">Основы</span>
 						</label>
-
-
 					</div>
 				</div>
 			</div>
