--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -519,12 +519,16 @@
 		<div class="filter__inner">
 			<div class="filter__top-inner">
 				<div class="filter__top">
-					<a class="button button_form_clear filter__button" href="">
-						Образовательные статьи
-					</a>
-					<a class="button button_form_none" href="">
-						Новостные статьи
-					</a>
+					<label class="check check-radio">
+						<input class="check__input  check-radio__input" type="radio" name="articles" value="indigo" checked>
+						<span class="check-radio__box">Образовательные статьи</span>
+					</label>
+
+					<label class="check check-radio">
+						<input class="check__input  check-radio__input" type="radio" name="articles" value="indigo">
+						<span class="check-radio__box">Новостные статьи</span>
+					</label>
+
 				</div>
 				<div class="filter__all">
 					<!-- <label for="altcoin">Altcoin</label>
