hero section end

--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -496,6 +496,39 @@
 			<p class="text hero__text">
 				Ваш универсальный путеводитель в мире криптовалют
 			</p>
+
+			<span class="hero__span  hero__span-svg hero__span_name_gambiling">
+				Gambiling
+			</span>
+
+
+			<a class="hero__link-wallet hero__link-wallet_subject_metamask"></a>
+			<span class="hero__span hero__span_name_1549">
+				Vote (1549)
+			</span>
+
+			<span class="hero__span hero__span-svg hero__span_name_finance">
+				Finance
+			</span>
+
+			<a class="hero__link-wallet hero__link-wallet_subject_uni"></a>
+			<span class="hero__span hero__span_name_0">
+				Vote
+			</span>
+
+			<a class="hero__link-wallet hero__link-wallet_subject_curve"></a>
+			<span class="hero__span hero__span_name_842">
+				Vote (842)
+			</span>
+
+			<span class="hero__span hero__span-svg hero__span_name_market">
+				MarketPlace
+			</span>
+
+						<a class="hero__link-wallet hero__link-wallet_subject_panke"></a>
+			<span class="hero__span hero__span_name_1548">
+				Vote (1548)
+			</span>
 		</div>
 	</section>
 
