--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Bithoven</title>
 	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="assets/styles/nouislider.css">
 	<link rel="stylesheet" href="assets/styles/index.css">
 </head>
 
@@ -815,7 +816,9 @@
 					</a>
 				</div>
 			</div>
+
 			<div class="nav__level">
+
 				<h3 class="title nav__topic-title">
 					Уровень
 				</h3>
@@ -831,6 +834,7 @@
 					</a>
 				</div>
 			</div>
+
 		</div>
 	</section>
 
