--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -1435,9 +1435,8 @@
 
 				<a class="link footer__img-link" href="#">
 					<span class="visually-hidden">googleplay</span>
-					<svg class="social__icon-play" width="119" height="30" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#google"></use>
-					</svg> </a>
+					<img src="assets/images/svg/google-play.svg" width="119" height="29" aria-hidden="true" alt="">
+				</a>
 			</div>
 		</div>
 
@@ -1562,9 +1561,7 @@
 
 			<a class="link footer__img-link" href="#">
 				<span class="visually-hidden">googleplay</span>
-				<svg class="social__icon-play" width="119" height="30" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#google"></use>
-				</svg>
+				<img src="assets/images/svg/google-play.svg" width="119" height="29" aria-hidden="true" alt="">
 			</a>
 		</div>
 
