main section end

--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -526,7 +526,7 @@
 				MarketPlace
 			</span>
 
-						<a class="hero__link-wallet hero__link-wallet_subject_panke"></a>
+			<a class="hero__link-wallet hero__link-wallet_subject_panke"></a>
 			<span class="hero__span hero__span_name_1548">
 				Vote (1548)
 			</span>
@@ -1023,16 +1023,18 @@
 			<div class="study__content">
 
 
-				<div class="main-card study__main-card">
+				<div class="main-card study__main-card study__main-card-glossary">
 					<h2 class="title study-main-card__title">
 						Что ищем?
 					</h2>
-					<form action="" class="glossary__form study__form" method="post">
-						<input class="glossary__input study__input" type="text" name="text" placeholder="Поиск по глоссарию"
-							value="" id="glossarySearch">
-						<button class="button_form_none glossary__form-button study__form-button" type="button" name="button">
+
+					<form action="" class="study__form" method="post">
+						<input class="study__input" type="text" name="text" placeholder="Поиск по глоссарию" value=""
+							id="glossarySearch">
+
+						<button class="study__form-button" type="button" name="button">
 							<svg class="form__form-of" width="17" height="17" aria-hidden="true" focusable="false">
-								<use href="assets/images/svg/sprite.svg#searglos"></use>
+								<use href="assets/images/svg/sprite.svg#study-search"></use>
 							</svg>
 						</button>
 					</form>
@@ -1113,10 +1115,10 @@
 						Никакого шума. Только сигнал.
 					</h2>
 
-					<form action="" class="glossary__form subs__form" method="post">
+					<form class="subs__form" action="" method="post">
 
 						<div class="subs__input-wrapper">
-							<input class="glossary__input subs__input" type="text" name="text" placeholder="Введите почту" value=""
+							<input class="subs__form-search" type="text" name="text" placeholder="Введите почту" value=""
 								id="glossarySearch">
 
 							<button class="button button_color_yellow subs__form-button--desktop" type="submit" name="button">
