--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -489,6 +489,7 @@
 
 	<article class="filter education__filter container">
 		<div class="filter__box">
+
 			<a class="back" href="/">
 				<svg class="back__icon" width="7" height="10" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#arrow-left"></use>
@@ -497,6 +498,7 @@
 					Вернуться на главную страницу
 				</span>
 			</a>
+
 			<nav class="breadcrumb" aria-label="Хлебные крошки">
 				<ol class="breadcrumb__list reset-list">
 					<li class="breadcrumb__item">
@@ -516,123 +518,123 @@
 		<h2 class="text education__title">
 			Навигация
 		</h2>
+
 		<div class="filter__inner">
 			<div class="filter__top-inner">
+
 				<div class="filter__top">
-					<label class="check check-radio">
-						<input class="check__input  check-radio__input" type="radio" name="articles" value="indigo" checked>
-						<span class="check-radio__box">Образовательные статьи</span>
+					<label class="radio">
+						<input class="visually-hidden radio__input" type="radio" name="articles" value="indigo"
+							checked>
+						<span class="radio__box">Образовательные статьи</span>
 					</label>
 
-					<label class="check check-radio">
-						<input class="check__input  check-radio__input" type="radio" name="articles" value="indigo">
-						<span class="check-radio__box">Новостные статьи</span>
+					<label class="radio">
+						<input class="visually-hidden radio__input" type="radio" name="articles" value="indigo">
+						<span class="radio__box">Новостные статьи</span>
 					</label>
-
 				</div>
+
 				<div class="filter__all">
-					<!-- <label for="altcoin">Altcoin</label>
-					<input type="checkbox" class="custom-checkbox" id="altcoin" name="happy" value="yes"> -->
-
-					<label class="check">
-						<input class="check__input" type="checkbox" name="color" value="indigo">
-						<span class="check__box">Altcoin</span>
+					<label class="tag">
+						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<span class="tag__box">Altcoin</span>
 					</label>
 
-					<label class="check">
-						<input class="check__input" type="checkbox" name="color" value="indigo">
-						<span class="check__box">Binance</span>
+					<label class="tag">
+						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<span class="tag__box">Binance</span>
 					</label>
 
-					<label class="check">
-						<input class="check__input" type="checkbox" name="color" value="indigo">
-						<span class="check__box">Биткоин</span>
+					<label class="tag">
+						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<span class="tag__box">Биткоин</span>
 					</label>
 
-					<label class="check">
-						<input class="check__input" type="checkbox" name="color" value="indigo">
-						<span class="check__box">Блокчейн</span>
+					<label class="tag">
+						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<span class="tag__box">Блокчейн</span>
 					</label>
 
-					<label class="check">
-						<input class="check__input" type="checkbox" name="color" value="indigo">
-						<span class="check__box">Консенсус</span>
+					<label class="tag">
+						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<span class="tag__box">Консенсус</span>
 					</label>
 
-					<label class="check">
-						<input class="check__input" type="checkbox" name="color" value="indigo">
-						<span class="check__box">DeFi</span>
+					<label class="tag">
+						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<span class="tag__box">DeFi</span>
 					</label>
 
-					<label class="check">
-						<input class="check__input" type="checkbox" name="color" value="indigo">
-						<span class="check__box">Технический анализ</span>
+					<label class="tag">
+						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<span class="tag__box">Технический анализ</span>
 					</label>
 
-					<label class="check">
-						<input class="check__input" type="checkbox" name="color" value="indigo">
-						<span class="check__box">Еще+12</span>
+					<label class="tag">
+						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<span class="tag__box">Еще+12</span>
 					</label>
 
 					<div class="filter__all-desktop">
-						<label class="check">
-							<input class="check__input" type="checkbox" name="color" value="indigo">
-							<span class="check__box">Технологии</span>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<span class="tag__box">Технологии</span>
 						</label>
 
-						<label class="check">
-							<input class="check__input" type="checkbox" name="color" value="indigo">
-							<span class="check__box">Технический анализ</span>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<span class="tag__box">Технический анализ</span>
 						</label>
 
-						<label class="check">
-							<input class="check__input" type="checkbox" name="color" value="indigo">
-							<span class="check__box">Криптография</span>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<span class="tag__box">Криптография</span>
 						</label>
 
-						<label class="check">
-							<input class="check__input" type="checkbox" name="color" value="indigo">
-							<span class="check__box">Экономика</span>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<span class="tag__box">Экономика</span>
 						</label>
 
-						<label class="check">
-							<input class="check__input" type="checkbox" name="color" value="indigo">
-							<span class="check__box">Торговля</span>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<span class="tag__box">Торговля</span>
 						</label>
 
-						<label class="check">
-							<input class="check__input" type="checkbox" name="color" value="indigo">
-							<span class="check__box">Ethereum</span>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<span class="tag__box">Ethereum</span>
 						</label>
 
-						<label class="check">
-							<input class="check__input" type="checkbox" name="color" value="indigo">
-							<span class="check__box">Приватность</span>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<span class="tag__box">Приватность</span>
 						</label>
 
-						<label class="check">
-							<input class="check__input" type="checkbox" name="color" value="indigo">
-							<span class="check__box">Майнинг</span>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<span class="tag__box">Майнинг</span>
 						</label>
 
-						<label class="check">
-							<input class="check__input" type="checkbox" name="color" value="indigo">
-							<span class="check__box">Metaverse</span>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<span class="tag__box">Metaverse</span>
 						</label>
 
-						<label class="check">
-							<input class="check__input" type="checkbox" name="color" value="indigo">
-							<span class="check__box">История</span>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<span class="tag__box">История</span>
 						</label>
 
-						<label class="check">
-							<input class="check__input" type="checkbox" name="color" value="indigo">
-							<span class="check__box">Консенсус</span>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<span class="tag__box">Консенсус</span>
 						</label>
 
-						<label class="check">
-							<input class="check__input" type="checkbox" name="color" value="indigo">
-							<span class="check__box">Основы</span>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<span class="tag__box">Основы</span>
 						</label>
 					</div>
 				</div>
