--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -1692,7 +1692,8 @@
 
 			<a class="link footer__img-link" href="#">
 				<span class="visually-hidden">googleplay</span>
-				<img src="assets/images/svg/google-play.svg" width="119" height="29" aria-hidden="true" focusable="false" alt="">
+				<img src="assets/images/svg/google-play.svg" width="119" height="29" aria-hidden="true" focusable="false"
+					alt="">
 			</a>
 		</div>
 
