--- a/source/markup/new-header.html
+++ b/source/markup/new-header.html
@@ -7,6 +7,30 @@
 		<link rel="stylesheet" href="assets/styles/index.css">
 	</head>
 	<body class="page__body">
+		<!-- c-header-block -->
+		<div class="page__c-mobile-header-menu c-mobile-header-menu">
+			<button
+				class="c-mobile-header-menu__close"
+				type="button"
+			>
+				<svg
+					class="c-mobile-header-menu__close-icon"
+					width="18"
+					height="18"
+					aria-hidden="true"
+					focusable="false"
+				>
+					<use href="assets/images/svg/sprite.svg#onof"></use>
+				</svg>
+				<span class="visually-hidden">
+					Закрыть
+				</span>
+			</button>
+			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero deserunt, sunt ea perspiciatis adipisci soluta dolore asperiores ratione possimus delectus numquam dicta pariatur modi cum magni sint nostrum vel sit.
+
+		</div>
+		<!-- /c-header-block -->
+
 		<!-- c-mobile-header -->
 		<header class="page__c-mobile-header c-mobile-header container">
 			<a
@@ -607,7 +631,7 @@
 			</a>
 
 			<button
-				class="c-menu__button"
+				class="c-menu__button c-menu__button_type_search"
 				type="button"
 			>
 				<svg
@@ -637,7 +661,7 @@
 			</button>
 
 			<button
-				class="c-menu__button"
+				class="c-menu__button c-menu__button_type_menu"
 				type="button"
 			>
 				<svg
