--- a/source/markup/new-header.html
+++ b/source/markup/new-header.html
@@ -7,6 +7,60 @@
 		<link rel="stylesheet" href="assets/styles/index.css">
 	</head>
 	<body class="page__body">
+		<div class="page__c-mobile-info c-mobile-info">
+			<button
+				class="c-mobile-info__button"
+				type="button"
+			>
+				<svg
+					class="c-mobile-info__button-icon"
+					width="18"
+					height="18"
+					aria-hidden="true"
+					focusable="false"
+				>
+					<use href="assets/images/svg/sprite.svg#onof"></use>
+				</svg>
+				<span class="visually-hidden">
+					Закрыть
+				</span>
+			</button>
+			<ul class="language-switcher reset-list">
+				<li class="language-switcher__item">
+					<a
+						class="language-switcher__link"
+						href="#"
+					>
+						English
+					</a>
+				</li>
+				<li class="language-switcher__item">
+					<a
+						class="language-switcher__link"
+						href="#"
+					>
+						English
+					</a>
+				</li>
+				<li class="language-switcher__item">
+					<a
+						class="language-switcher__link"
+						href="#"
+					>
+						English
+					</a>
+				</li>
+				<li class="language-switcher__item">
+					<a
+						class="language-switcher__link"
+						href="#"
+					>
+						English
+					</a>
+				</li>
+			</ul>
+		</div>
+
 		<!-- c-mobile-header-auth -->
 		<div class="page__c-mobile-header-auth c-mobile-header-auth auth">
 			<button
@@ -151,7 +205,7 @@
 			</a>
 
 			<button
-				class="c-mobile-header__button"
+				class="c-mobile-header__button c-mobile-header__button_type_language"
 				type="button"
 			>
 				<span aria-hidden="true">ru</span>
