--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -1643,8 +1643,8 @@
 	</footer>
 	<script src="https://unpkg.com/nouislider@10.0.0/distribute/nouislider.min.js"></script>
 	<script src="assets/scripts/range.js"></script>
-	<script src="assets/scripts/main.js"></script>
-	<script src="assets/scripts/index.js"></script>
+	<!-- <script src="assets/scripts/main.js"></script>
+	<script src="assets/scripts/index.js"></script> -->
 </body>
 
 </html>
