--- a/source/markup/new-header.html
+++ b/source/markup/new-header.html
@@ -7,7 +7,10 @@
 		<link rel="stylesheet" href="assets/styles/index.css">
 	</head>
 	<body class="page__body">
-		<div class="page__c-mobile-info c-mobile-info">
+		<div
+			class="page__c-mobile-info c-mobile-info"
+			data-mobile-info="language"
+		>
 			<button
 				class="c-mobile-info__button"
 				type="button"
