--- a/source/markup/new-header.html
+++ b/source/markup/new-header.html
@@ -7,11 +7,11 @@
 		<link rel="stylesheet" href="assets/styles/index.css">
 	</head>
 	<body class="page__body">
-		<div class="c-mobile-info-layout"></div>
 		<div
 			class="page__c-mobile-info c-mobile-info"
 			data-mobile-info="info"
 		>
+			<div class="c-mobile-info__layout"></div>
 			<button
 				class="c-mobile-info__button"
 				type="button"
@@ -65,6 +65,7 @@
 			class="page__c-mobile-info c-mobile-info"
 			data-mobile-info="language"
 		>
+			<div class="c-mobile-info__layout"></div>
 			<button
 				class="c-mobile-info__button"
 				type="button"
