--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -448,46 +448,36 @@
 			</form>
 		</div>
 
-		<nav class="header__nav">
+		<!-- <nav class="header__nav">
 			<button class="header__button-bottom header__button_type_home" type="button">
 				<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#home"></use>
 				</svg>
 				Главная
 			</button>
-
 			<button class="middle_media_mobile header__button-bottom" type="button">
-				<!-- <form action="" class="search-box search-box_media_mobile" method="post">
-					<input type="text" class="input input_media_mobile" name="text" value="" id="search">
-					<label class="middle__label middle__label_media_mobile" for="search">Поиск</label>
-					<button type="button" class="btn btn_media_mobile" name="button"></button>
-				</form> -->
 				<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#searchBac"></use>
 				</svg>
 				Поиск
 			</button>
-
-
-
 			<button class="header__button-bottom header__button_type_profile" type="button">
 				<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#profile"></use>
 				</svg>
 				Профиль
 			</button>
-
 			<button class="header__button-bottom header__button_type_menu" type="button">
 				<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#menu"></use>
 				</svg>
 				Меню
 			</button>
-		</nav>
+		</nav> -->
 	</header>
 
 
-	<nav class="mobile-menu">
+	<!-- <nav class="mobile-menu">
 		<button class="button_form_none mobile-menu__button" type="button">
 			<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
 				<use href="assets/images/svg/sprite.svg#onof"></use>
@@ -549,10 +539,9 @@
 				</a>
 			</li>
 		</ul>
-	</nav>
+	</nav> -->
 
-
-	<nav class="mobile-menu mobile-menu_lang">
+	<!-- <nav class="mobile-menu mobile-menu_lang">
 		<button class="button_form_none mobile-menu__button mobile-menu__button-ofLang type=" type="button">
 			<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
 				<use href="assets/images/svg/sprite.svg#onof"></use>
@@ -656,9 +645,9 @@
 				</a>
 			</li>
 		</ul>
-	</nav>
+	</nav> -->
 
-	<section class="auth container header__aut-none">
+	<!-- <section class="auth container header__aut-none">
 		<button class="button_form_none header__button-onof auth_button-onof" type="button">
 			<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
 				<use href="assets/images/svg/sprite.svg#onof"></use>
@@ -740,11 +729,11 @@
 				Меню
 			</button>
 		</nav>
-	</section>
+	</section> -->
 
 	<section class="hero">
 		<div class="container hero__container">
-			<h1 class="title hero__title">
+			<h1 class="title title_size_large hero__title">
 				Узнавайте больше о блокчейне с Bithoven Wiki
 			</h1>
 
@@ -752,14 +741,16 @@
 				Ваш универсальный путеводитель в мире криптовалют
 			</p>
 
-			<span class="hero__span  hero__span-svg hero__span_name_gambiling">
+		 <div class="hero__icon-wrapper hero__icon-wrapper_subject_metamask">
+				<a class="hero__link-wallet hero__link-wallet_subject_metamask" href="#"></a>
+				<span class="hero__span">
+					Vote (1549)
+				</span>
+			</div>
+
+			
+		<!--		<span class="hero__span  hero__span-svg hero__span_name_gambiling">
 				Gambiling
-			</span>
-
-
-			<a class="hero__link-wallet hero__link-wallet_subject_metamask"></a>
-			<span class="hero__span hero__span_name_1549">
-				Vote (1549)
 			</span>
 
 			<span class="hero__span hero__span-svg hero__span_name_finance">
@@ -783,7 +774,7 @@
 			<a class="hero__link-wallet hero__link-wallet_subject_panke"></a>
 			<span class="hero__span hero__span_name_1548">
 				Vote (1548)
-			</span>
+			</span> -->
 		</div>
 	</section>
 
