--- a/source/markup/new-header.html
+++ b/source/markup/new-header.html
@@ -925,6 +925,50 @@
 		</form>
 		<!-- /c-mobile-search -->
 
+		<!-- c-main-header -->
+		<header class="page__c-main-header c-main-header">
+			<div class="c-main-header__wrapper container">
+				<button
+					class="c-main-header__button"
+					type="button"
+				>
+					Узнать
+				</button>
+				<button
+					class="c-main-header__button"
+					type="button"
+				>
+					Темы
+					<div class="c-main-header__submenu">
+						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
+						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
+						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
+						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
+						<a class="c-main-header__submenu-button button" href="#">Altcoin</a>
+					</div>
+				</button>
+				<a
+					class="c-main-header__logotype logotype"
+					href="/"
+				>
+					<img
+						class="logotype__image"
+						width="108"
+						height="45"
+						src="assets/images/main-logo.svg"
+						alt="Логотип компании Bithoven"
+					>
+				</a>
+				<a
+					class="button button_color_yellow"
+					href="/auth.html"
+				>
+					Авторизация
+				</a>
+			</div>
+		</header>
+		<!-- /c-main-header -->
+
 		<script src="assets/scripts/toggle-element.js"></script>
 		<script src="assets/scripts/c-header.js"></script>
 		<script src="assets/scripts/c-menu.js"></script>
